cmake_minimum_required(VERSION 3.20)
project(Altu_09_03)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Altu_09_03 2750.cpp)
#add_executable(Altu_09_03 2751.cpp
#add_executable(Altu_09_03 1316.cpp)
add_executable(Altu_09_03
        #13458.cpp
        #1946.cpp
        #11399.cpp
        #10994.cpp
        1026.cpp)
#add_executable(Altu_09_03 10825.cpp)

